--- a/solar_backend/templates/signup.jinja2
+++ b/solar_backend/templates/signup.jinja2
@@ -1,3 +1,29 @@
-<h2>Eine Bestätigungsemail ist auf dem weg zu dir. 
-    Um die Registrierung abzuschließen bestätige 
-    deine Email-Adresse um dich einloggen zu können</h2>
+{% extends "base.jinja2" %}
+{% block title %}Registrieren{% endblock %}
+{% block content %}
+  <main class="flex flex-col justify-center px-6 py-12 lg:px-8">
+    <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+      <h2 class="mt-10 text-3xl font-bold leading-9 tracking-tight">Registrieren</h2>
+    </div>
+    <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+
+      <form class="space-y-4" action="v1/signup" method="post">
+        <div>
+          <input name="first_name" type="text" placeholder="Vorname" class="input input-bordered w-full max-w-xs" />
+        </div>
+        <div>
+          <input name="last_name" type="text" placeholder="Nachname" class="input input-bordered w-full max-w-xs" />
+        </div>
+        <div>
+          <input name="email" type="email" placeholder="Email" class="input input-bordered w-full max-w-xs" />
+        </div>
+        <div>
+          <input name="password" type="password"  minlength="8" placeholder="Passwort" class="input input-bordered w-full max-w-xs" />
+        </div>
+        <div>
+          <button type="submit" class="btn btn-active btn-primary">Registrieren</button>
+        </div>
+      </form>
+    </div>
+  </main>
+{% endblock %}
