--- a/solar_backend/templates/base.jinja2
+++ b/solar_backend/templates/base.jinja2
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="h-full">
 <head>
+    <meta charset="utf-8">
     <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.4/dist/full.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -11,9 +12,12 @@
       display: grid;
       grid-template-rows: auto 1fr auto;
     }
+    .link{
+      text-decoration: underline;
+    }
 </style>
 </head>
-<body class="h-full">
+<body class="h-full" hx-boost="true">
 
   <header class="navbar bg-base-100">
     <div class="navbar-start">
@@ -22,9 +26,9 @@
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg>
         </label>
         <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-          <li><a>Homepage</a></li>
-          <li><a>Portfolio</a></li>
-          <li><a>About</a></li>
+          <li><a href="/" hx-push-url="true">Home</a></li>
+          <li><a href="/add_inverter" hx-push-url="true">Hinzufügen</a></li>
+          <li><a href="/logout" hx-push-url="true">Logout</a></li>
         </ul>
       </div>
     </div>
@@ -38,10 +42,13 @@
       </button>
     </div>
   </header>
+
+  
+    <main class="flex flex-col justify-center px-6 py-12 lg:px-8">
     {% block content %}
 
     {% endblock %}
-
+    </main>
   {% block footer %}
   <footer class="footer items-center p-4 bg-neutral text-neutral-content flex justify-evenly">
   <aside class="items-center flex-auto">
