--- a/solar_backend/templates/signup.jinja2
+++ b/solar_backend/templates/signup.jinja2
@@ -7,7 +7,7 @@
     </div>
     <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
 
-      <form class="space-y-4" action="v1/signup" method="post">
+      <form class="space-y-4" action="/signup" method="post" hx-push-url="true">
         <div>
           <input name="first_name" type="text" placeholder="Vorname" class="input input-bordered w-full max-w-xs" />
         </div>
