start page and delete inverter

--- a/solar_backend/templates/complete_verify.jinja2
+++ b/solar_backend/templates/complete_verify.jinja2
@@ -5,7 +5,7 @@
 <ul class="steps steps-vertical ">
   <li class="step step-primary"><p><i class="fa-solid fa-user-plus"></i> Registrieren</p></li>
   <li class="step step-primary"><p><i class="fa-solid fa-envelope-circle-check"></i> Email Verifizieren</p></li>
-  <li class="step"><button class="btn btn-accent" hx-get="/add_inverter"><i class="fa-solid fa-square-plus"></i> Wechselrichter Hinzufügen</button></li>
+  <li class="step"><button class="btn btn-accent" hx-get="/add_inverter" hx-target="body" hx-push-url="true"><i class="fa-solid fa-square-plus"></i> Wechselrichter Hinzufügen</button></li>
   <li class="step"><p><i class="fa-solid fa-chart-line"></i> Dasboard erkunden</p></li>
 </ul>
 </div>
