token api completed

--- a/solar_backend/templates/base.jinja2
+++ b/solar_backend/templates/base.jinja2
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="navbar-center">
-      <a class="btn btn-ghost normal-case text-xl">Deye Hard</a>
+      <a href="/" hx-push-url="true" class="btn btn-ghost normal-case text-xl">Deye Hard</a>
     </div>
     <div class="navbar-end">
         <div>
