--- a/solar_backend/templates/signup.jinja2
+++ b/solar_backend/templates/signup.jinja2
@@ -21,7 +21,7 @@
           <input name="password" type="password"  minlength="8" placeholder="Passwort" class="input input-bordered w-full max-w-xs" />
         </div>
         <div>
-          <button type="submit" class="btn btn-active btn-primary">Registrieren</button>
+          <button type="submit" class="btn btn-active btn-ac">Registrieren</button>
         </div>
       </form>
     </div>
