--- a/solar_backend/templates/login.jinja2
+++ b/solar_backend/templates/login.jinja2
@@ -20,7 +20,7 @@
       </form>
     </div>
     <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-      <b><button class="btn" hx-get="/signup" hx-target="body">Account anlegen</button></b>
+      <b><button class="btn" hx-get="/signup" hx-target="body" hx-push-url="true">Account anlegen</button></b>
     </div>
   </main>
 {% endblock %}
