token api endpoint extended

--- a/solar_backend/templates/add_inverter.jinja2
+++ b/solar_backend/templates/add_inverter.jinja2
@@ -7,7 +7,7 @@
     </div>
     <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
 
-    <form class="space-y-4" hx-post="/add_inverter" hx-ext='json-enc' hx-target="body" hx-push-url="true">
+    <form class="space-y-4" hx-post="/inverter" hx-ext='json-enc' hx-target="body" hx-push-url="true">
         <div>
           <input name="name" type="text" placeholder="Name" class="input input-bordered w-full max-w-xs" />
         </div>
