--- a/solar_backend/templates/new_password.jinja2
+++ b/solar_backend/templates/new_password.jinja2
@@ -11,12 +11,7 @@
           <input name="new_password1" type="password" minlength="8" placeholder="Neues Passwort" class="input input-bordered w-full max-w-xs" />
         </div>
         <div>
-          <input name="new_password2" type="password"  minlength="8" placeholder="Neues Passwort" class="input input-bordered w-full max-w-xs" 
-            _="on htmx:validation:validate
-                if my.value != 'foo'
-                    call me.setCustomValidity('Passwort muss gleich sein')
-                else
-                    call me.setCustomValidity('')"/>
+          <input name="new_password2" type="password"  minlength="8" placeholder="Neues Passwort" class="input input-bordered w-full max-w-xs" />
         </div>
         <div>
           <button type="submit" class="btn btn-active btn-primary">Ändern</button>
