--- a/solar_backend/templates/base.jinja2
+++ b/solar_backend/templates/base.jinja2
@@ -43,7 +43,7 @@
       </button>
     </div>
   </header>
-    <main class="flex flex-col justify-center px-6 py-12 lg:px-8">
+    <main class="flex flex-col justify-center px-6 lg:px-8">
       <div id="alert">
       </div>
     {% block content %}
