--- a/solar_backend/templates/start.jinja2
+++ b/solar_backend/templates/start.jinja2
@@ -3,38 +3,64 @@
 {% block content %}
 
     <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-      <h2 class="mt-10 text-3xl font-bold leading-9 tracking-tight">Hallo {{ user.first_name }}</h2>
-    </div>
-    <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-      <h2 class="mt-10 text-2xl font-bold leading-9 tracking-tight">Wechselrichter</h2>
-    </div>
-    <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-
             {% for inverter in inverters %}
-            <div id="card-{{ inverter.id }}" class="card w-80 bg-base-100 shadow-xl mt-6">
+            <div id="card-{{ inverter.id }}" class="card w-80 bg-base-100 shadow-xl card-normal mt-6">
                 <div class="card-body">
-                    <h2 class="card-title">{{ inverter.name }}</h2>
+                    <h1 class="card-title">{{ inverter.name }}</h1>
+                    <div class="stats shadow stats-vertical">
+  
+                    <div class="stat">
+                    <div class="stat-figure text-primary">
+                    <svg width="40" height="40" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path fill="#000000" d="M3 4V2h3v2H3ZM2 22h9v-4H2.8L2 22ZM6.125 9.325L4.7 7.925L6.825 5.8L8.25 7.2L6.125 9.325ZM3.2 16H11v-4H4l-.8 4ZM12 7Q9.925 7 8.462 5.537T7 2h10q0 2.075-1.463 3.538T12 7Zm-1 4V8h2v3h-2Zm2 11h9l-.8-4H13v4Zm0-6h7.8l-.8-4h-7v4Zm4.875-6.675l-2.1-2.125l1.4-1.4L19.3 7.9l-1.425 1.425ZM18 4V2h3v2h-3Z"/>
+                    </svg>
+                    </div>
+                        <div class="stat-title">Momentane Leistung</div>
+                        <div class="stat-value">{{ inverter.current_power }} W</div>
+                        <div class="stat-desc">{{ inverter.last_update }}</div>
+                    </div>
+                    
+                    </div>
                     <p>Seriennummer: {{ inverter.serial_logger }}</p>
                     <div class="card-actions justify-end">
-                    <button class="btn btn-secondary" hx-delete="/inverter/{{ inverter.id }}" hs-swap="delete" hx-target="#card-{{ inverter.id }}">Entfernen</button>
+                    <button class="btn btn-secondary" hx-delete="/inverter/{{ inverter.id }}" hs-swap="delete" hx-target="#card-{{ inverter.id }}" hx-confirm="Soll der Wechselrichter wirklich gelöscht werden, alle gespeicherten Daten werden gelöscht?">Entfernen</button>
                     </div>
                 </div>
             </div>
-
             
             
         {% else %}
-            <h2>Keine Wechselrichter</h2>
-        {% endfor %}
-    
-    <div id="add_new" class="card w-80 bg-base-100 shadow-xl mt-6">
+            <div id="card-demo" class="card w-80 bg-base-100 shadow-xl card-normal mt-6">
                 <div class="card-body">
-                    <h2 class="card-title">Neuen Wechselrichter hinzufügen</h2>
-                    <div class="card-actions justify-end">
-                    <button class="btn btn-accent" hx-get="/add_inverter"  hx-target="body">Hinzufügen</button>
+                    <h1 class="card-title">Demo PV</h1>
+                    <div class="stats shadow stats-vertical">
+  
+                    <div class="stat">
+                    <div class="stat-figure text-primary">
+                    <svg width="40" height="40" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path fill="#000000" d="M3 4V2h3v2H3ZM2 22h9v-4H2.8L2 22ZM6.125 9.325L4.7 7.925L6.825 5.8L8.25 7.2L6.125 9.325ZM3.2 16H11v-4H4l-.8 4ZM12 7Q9.925 7 8.462 5.537T7 2h10q0 2.075-1.463 3.538T12 7Zm-1 4V8h2v3h-2Zm2 11h9l-.8-4H13v4Zm0-6h7.8l-.8-4h-7v4Zm4.875-6.675l-2.1-2.125l1.4-1.4L19.3 7.9l-1.425 1.425ZM18 4V2h3v2h-3Z"/>
+                    </svg>
                     </div>
+                        <div class="stat-title">Momentane Leistung</div>
+                        <div class="stat-value">333 W</div>
+                        <div class="stat-desc">vor 26 Sekunden</div>
+                    </div>
+                    
+                    </div>
+                    <p>Seriennummer: 123456789</p>
                 </div>
             </div>
         
-    </div>
+    
+        <div id="add_new" class="card w-80 bg-base-100 shadow-xl mt-6">
+                    <div class="card-body">
+                        <h2 class="card-title">Neuen Wechselrichter hinzufügen</h2>
+                        <div class="card-actions justify-end">
+                        <button class="btn btn-accent" hx-get="/add_inverter"  hx-target="body">Hinzufügen</button>
+                        </div>
+                    </div>
+                </div>
+            
+        </div>
+    {% endfor %}
 {% endblock %}
