--- a/solar_backend/templates/base.jinja2
+++ b/solar_backend/templates/base.jinja2
@@ -22,6 +22,7 @@
 
   <header class="navbar bg-base-100">
     <div class="navbar-start">
+      {% if user %}
       <div class="dropdown">
         <label tabindex="0" class="btn btn-ghost btn-circle">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg>
@@ -32,6 +33,7 @@
           <li><a href="/logout" hx-push-url="true">Logout</a></li>
         </ul>
       </div>
+      {% endif %}
     </div>
     <div class="navbar-center">
       <a href="/" hx-push-url="true" class="btn btn-ghost normal-case text-xl">Deye Hard</a>
