--- a/solar_backend/templates/base.jinja2
+++ b/solar_backend/templates/base.jinja2
@@ -30,6 +30,7 @@
         <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
           <li><a href="/" hx-push-url="true">Home</a></li>
           <li><a href="/add_inverter" hx-push-url="true">Hinzufügen</a></li>
+          <li><a href="/account" hx-push-url="true">Konto Verwalten</a></li>
           <li><a href="/logout" hx-push-url="true">Logout</a></li>
         </ul>
       </div>
