--- a/solar_backend/templates/base.jinja2
+++ b/solar_backend/templates/base.jinja2
@@ -30,9 +30,9 @@
         <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
           <li><a href="/" hx-push-url="true">Home</a></li>
           {% if user.is_verified %}
-          <li><a href="/add_inverter" hx-push-url="true">Hinzufügen</a></li>
+          <li><a href="/inverters" hx-push-url="true">Wechselrichter</a></li>
           {% else %}
-          <li class="disabled"><a class="text-base-300">Hinzufügen (Email verifizieren)</a></li>
+          <li class="disabled"><a class="text-base-300">Wechselrichter (Email verifizieren)</a></li>
           {% endif %}
           <li><a href="/account" hx-push-url="true">Konto Verwalten</a></li>
           <li><a href="/logout" hx-push-url="true">Logout</a></li>
@@ -58,17 +58,17 @@
     {% endblock %}
     </main>
   {% block footer %}
-  <footer class="footer items-center p-4 bg-neutral text-neutral-content flex justify-evenly">
+  <footer class="footer items-center mt-6 p-4 bg-neutral text-neutral-content flex justify-evenly">
   <aside class="items-center flex-auto">
       <p>Made with ❤️ by<img src="https://wtf-eg.de/images/wtf_logo_white.svg" alt="WTF Logo"></p>
-      
-    </aside> 
+
+    </aside>
     <nav class="md:place-self-center">
       <div class="flex-auto">
     <a href="https://chaos.social/@HackerGeno"><i class="fa-brands fa-mastodon fa-2x"></i></a>
     <a href="https://github.com/wtf-eg/project"><i class="fa-brands fa-github fa-2x"></i></a>
       </div>
-    </nav>  
+    </nav>
   </footer>
         {% endblock %}
     </div>
