fix: plotly modebar disabled (faulty positioning)

--- a/solar_backend/templates/dashboard.jinja2
+++ b/solar_backend/templates/dashboard.jinja2
@@ -164,7 +164,7 @@
 
             const config = {
                 responsive: true,
-                displayModeBar: true,
+                displayModeBar: false,
                 displaylogo: false,
                 modeBarButtonsToRemove: ['lasso2d', 'select2d'],
                 toImageButtonOptions: {
