--- a/solar_backend/templates/start.jinja2
+++ b/solar_backend/templates/start.jinja2
@@ -22,7 +22,7 @@
             <div class="card bg-base-100 shadow-xl card-normal">
                 <div class="card-body">
                     <h2 class="card-title">Übersicht</h2>
-                    <div class="stats shadow stats-vertical">
+                    <div class="stats shadow stats-vertical overflow-hidden">
                         <div class="stat">
                             <div class="stat-figure text-primary">
                                 <svg width="40" height="40" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -40,7 +40,7 @@
             <div class="card bg-base-100 shadow-xl card-normal">
                 <div class="card-body">
                     <h2 class="card-title">Heute</h2>
-                    <div class="stats shadow stats-vertical">
+                    <div class="stats shadow stats-vertical overflow-hidden">
                         <div class="stat">
                             <div class="stat-figure text-primary">
                                 <svg width="40" height="40" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -65,7 +65,7 @@
                  hx-push-url="true">
                 <div class="card-body">
                     <h1 class="card-title">{{ inverter.name }}</h1>
-                    <div class="stats shadow stats-vertical">
+                    <div class="stats shadow stats-vertical overflow-hidden">
 
                     <div class="stat">
                     <div class="stat-figure text-primary">
@@ -89,7 +89,7 @@
             <div id="card-demo" class="card bg-base-100 shadow-xl card-normal">
                 <div class="card-body">
                     <h1 class="card-title">Demo PV</h1>
-                    <div class="stats shadow stats-vertical">
+                    <div class="stats shadow stats-vertical overflow-hidden">
 
                     <div class="stat">
                     <div class="stat-figure text-primary">
