--- a/solar_backend/templates/base.jinja2
+++ b/solar_backend/templates/base.jinja2
@@ -4,19 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>{% block title %}{% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.4/dist/full.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="/static/output.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdn.tailwindcss.com"></script>
-<style>
-    body{
-      min-height: 100%;
-      display: grid;
-      grid-template-rows: auto 1fr auto;
-    }
-    .link{
-      text-decoration: underline;
-    }
-</style>
 </head>
 <body class="h-full" hx-boost="true">
 
@@ -50,7 +39,7 @@
       </button>
     </div>
   </header>
-    <main class="flex flex-col justify-center px-6 lg:px-8">
+    <main class="flex flex-col px-4 md:px-6 lg:px-8 overflow-x-hidden">
       <div id="alert">
       </div>
     {% block content %}
